# OpenTTD-social-discord

./: .gitignore  CMakeLists.txt  README.md  download-sdk.sh
.github/workflows/: ci-build.yml  release-linux.yml  release-macos.yml  release-source.yml  release-windows.yml  release.yml  upload-github.yml
cmake/: PackageBundle.cmake  RPath.cmake
cmake/scripts/: FindVersion.cmake
os/macos/: Info.plist.in  Install  Install.txt  InstallPlugin  notarize.sh
src/: plugin.cpp
